--- a/poc/style.css
+++ b/poc/style.css
@@ -38,6 +38,14 @@ body {
 }
 
 .led-point {
-    border: 1px solid white;
     border-radius: 50%;
+}
+
+.led-point.off {
+    border: 1px solid #fff;
+    background-color: rgba(0,0,0,0);
+}
+
+.led-point.on {
+    background-color: rgba(255,255,255,100);
 }
